--- a/YoursMine/YoursMine/니꺼사기/Cells/LessonsListCell.xib
+++ b/YoursMine/YoursMine/니꺼사기/Cells/LessonsListCell.xib
@@ -18,52 +18,76 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="LessonsListCell" rowHeight="109" id="KGk-i7-Jjw" customClass="LessonsListCell" customModule="YoursMine" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="390" height="129"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="LessonsListCell" rowHeight="124" id="KGk-i7-Jjw" customClass="LessonsListCell" customModule="YoursMine" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="390" height="131"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="390" height="129"/>
+                <rect key="frame" x="0.0" y="0.0" width="390" height="131"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mcl-dQ-B5r">
-                        <rect key="frame" x="0.0" y="0.0" width="390" height="30"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fjb-81-Je6">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="25"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5회이상 지속된 클래스 입니다." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6je-X4-Roo">
-                                <rect key="frame" x="15" y="7" width="360" height="16"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                <color key="textColor" name="TextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="thf-CE-BQ6">
+                                <rect key="frame" x="0.0" y="0.0" width="100" height="25"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="마감임박" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2fQ-nY-v89">
+                                        <rect key="frame" x="15" y="5" width="45" height="15.5"/>
+                                        <fontDescription key="fontDescription" name="NanumBarunGothic" family="NanumBarunGothic" pointSize="13"/>
+                                        <color key="textColor" red="0.79420358940000002" green="0.30957214910000003" blue="0.2907174716" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="2fQ-nY-v89" firstAttribute="leading" secondItem="thf-CE-BQ6" secondAttribute="leading" constant="15" id="RDA-PJ-l5K"/>
+                                    <constraint firstItem="2fQ-nY-v89" firstAttribute="centerY" secondItem="thf-CE-BQ6" secondAttribute="centerY" id="dhH-8D-Fue"/>
+                                    <constraint firstAttribute="width" constant="100" id="sas-BP-tD8"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mcl-dQ-B5r">
+                                <rect key="frame" x="100" y="0.0" width="290" height="25"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5회이상 지속된 클래스 입니다." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6je-X4-Roo">
+                                        <rect key="frame" x="15" y="7" width="260" height="14"/>
+                                        <fontDescription key="fontDescription" name="NanumBarunGothic" family="NanumBarunGothic" pointSize="12"/>
+                                        <color key="textColor" name="TextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <constraints>
+                                    <constraint firstItem="6je-X4-Roo" firstAttribute="top" secondItem="Mcl-dQ-B5r" secondAttribute="top" constant="7" id="MzI-0h-hjl"/>
+                                    <constraint firstItem="6je-X4-Roo" firstAttribute="leading" secondItem="Mcl-dQ-B5r" secondAttribute="leading" constant="15" id="dxJ-OW-hob"/>
+                                    <constraint firstItem="6je-X4-Roo" firstAttribute="centerX" secondItem="Mcl-dQ-B5r" secondAttribute="centerX" id="iKo-Bv-b84"/>
+                                    <constraint firstAttribute="trailing" secondItem="6je-X4-Roo" secondAttribute="trailing" constant="15" id="p9A-EE-RTc"/>
+                                </constraints>
+                            </view>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="6je-X4-Roo" firstAttribute="top" secondItem="Mcl-dQ-B5r" secondAttribute="top" constant="7" id="MzI-0h-hjl"/>
-                            <constraint firstAttribute="height" constant="30" id="dhz-pE-pXA"/>
-                            <constraint firstItem="6je-X4-Roo" firstAttribute="leading" secondItem="Mcl-dQ-B5r" secondAttribute="leading" constant="15" id="dxJ-OW-hob"/>
-                            <constraint firstItem="6je-X4-Roo" firstAttribute="centerX" secondItem="Mcl-dQ-B5r" secondAttribute="centerX" id="iKo-Bv-b84"/>
-                            <constraint firstAttribute="trailing" secondItem="6je-X4-Roo" secondAttribute="trailing" constant="15" id="p9A-EE-RTc"/>
+                            <constraint firstAttribute="height" constant="25" id="3S4-yd-4Dm"/>
                         </constraints>
-                    </view>
+                    </stackView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kw7-Hb-DrT">
-                        <rect key="frame" x="0.0" y="30" width="390" height="100"/>
+                        <rect key="frame" x="0.0" y="25" width="390" height="100"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="롱보드 원데이 레슨" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y1j-o8-NOK">
-                                <rect key="frame" x="15" y="0.0" width="160" height="45"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="롱보드 원데이 레슨 롱보드 " lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y1j-o8-NOK">
+                                <rect key="frame" x="15" y="0.0" width="160" height="55"/>
                                 <fontDescription key="fontDescription" name="NanumBarunGothic" family="NanumBarunGothic" pointSize="15"/>
                                 <color key="textColor" name="TextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Em-z9-usV">
-                                <rect key="frame" x="15" y="50" width="195" height="20"/>
+                                <rect key="frame" x="15" y="60" width="195" height="20"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="하나은행" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wND-az-DAv">
-                                        <rect key="frame" x="0.0" y="0.0" width="46.5" height="20"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="45" height="20"/>
                                         <fontDescription key="fontDescription" name="NanumBarunGothic" family="NanumBarunGothic" pointSize="13"/>
                                         <color key="textColor" name="TextColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Robert" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1fn-iL-YJN">
-                                        <rect key="frame" x="54.5" y="2.5" width="40" height="15"/>
+                                        <rect key="frame" x="53" y="2.5" width="39.5" height="15.5"/>
                                         <fontDescription key="fontDescription" name="NanumBarunGothic" family="NanumBarunGothic" pointSize="13"/>
                                         <color key="textColor" name="TextColor"/>
                                         <nil key="highlightedColor"/>
@@ -80,7 +104,7 @@
                                 </constraints>
                             </view>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Eh8-G5-8Wu">
-                                <rect key="frame" x="270" y="60" width="120" height="25"/>
+                                <rect key="frame" x="265" y="70" width="120" height="25"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Yh5-CB-rt4">
                                         <rect key="frame" x="0.0" y="0.0" width="60" height="25"/>
@@ -146,7 +170,7 @@
                                 </subviews>
                             </stackView>
                             <progressView opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.69999999999999996" translatesAutoresizingMaskIntoConstraints="NO" id="KcR-b4-auT">
-                                <rect key="frame" x="215" y="12" width="160" height="10"/>
+                                <rect key="frame" x="215" y="15" width="160" height="10"/>
                                 <color key="backgroundColor" name="LightYellowColor"/>
                                 <color key="tintColor" name="PointYellowColor"/>
                                 <constraints>
@@ -160,7 +184,7 @@
                                 </userDefinedRuntimeAttributes>
                             </progressView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1차 7명 / 10명" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3WI-aT-K7i">
-                                <rect key="frame" x="235" y="10" width="120" height="13"/>
+                                <rect key="frame" x="235" y="12" width="120" height="13"/>
                                 <fontDescription key="fontDescription" name="NanumBarunGothic" family="NanumBarunGothic" pointSize="11"/>
                                 <color key="textColor" name="DarkBrown"/>
                                 <nil key="highlightedColor"/>
@@ -170,34 +194,44 @@
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="KcR-b4-auT" secondAttribute="trailing" constant="15" id="0Fb-zt-zkH"/>
                             <constraint firstItem="3WI-aT-K7i" firstAttribute="leading" secondItem="KcR-b4-auT" secondAttribute="leading" constant="20" id="29Y-tw-6br"/>
-                            <constraint firstItem="KcR-b4-auT" firstAttribute="top" secondItem="y1j-o8-NOK" secondAttribute="top" constant="12" id="7mS-iH-FtX"/>
+                            <constraint firstItem="KcR-b4-auT" firstAttribute="top" secondItem="y1j-o8-NOK" secondAttribute="top" constant="15" id="7mS-iH-FtX"/>
                             <constraint firstAttribute="trailing" secondItem="3WI-aT-K7i" secondAttribute="trailing" constant="35" id="Njb-Cw-62X"/>
                             <constraint firstItem="3Em-z9-usV" firstAttribute="leading" secondItem="y1j-o8-NOK" secondAttribute="leading" id="PqI-iB-yMV"/>
                             <constraint firstAttribute="height" constant="100" id="QSZ-DE-VEH"/>
                             <constraint firstItem="y1j-o8-NOK" firstAttribute="leading" secondItem="kw7-Hb-DrT" secondAttribute="leading" constant="15" id="VVw-yR-D1K"/>
-                            <constraint firstAttribute="bottom" secondItem="3Em-z9-usV" secondAttribute="bottom" constant="30" id="ay2-Ct-mmK"/>
+                            <constraint firstAttribute="bottom" secondItem="3Em-z9-usV" secondAttribute="bottom" constant="20" id="ay2-Ct-mmK"/>
                             <constraint firstItem="y1j-o8-NOK" firstAttribute="top" secondItem="kw7-Hb-DrT" secondAttribute="top" id="bmA-XU-2jZ"/>
-                            <constraint firstAttribute="trailing" secondItem="Eh8-G5-8Wu" secondAttribute="trailing" id="ff2-e9-z0n"/>
+                            <constraint firstAttribute="trailing" secondItem="Eh8-G5-8Wu" secondAttribute="trailing" constant="5" id="ff2-e9-z0n"/>
                             <constraint firstItem="3Em-z9-usV" firstAttribute="top" secondItem="y1j-o8-NOK" secondAttribute="bottom" constant="5" id="hzz-MP-fHG"/>
-                            <constraint firstAttribute="bottom" secondItem="Eh8-G5-8Wu" secondAttribute="bottom" constant="15" id="kjv-rM-lt4"/>
+                            <constraint firstAttribute="bottom" secondItem="Eh8-G5-8Wu" secondAttribute="bottom" constant="5" id="kjv-rM-lt4"/>
                             <constraint firstAttribute="trailing" secondItem="3Em-z9-usV" secondAttribute="trailing" constant="180" id="s03-aS-VAo"/>
                             <constraint firstItem="KcR-b4-auT" firstAttribute="leading" secondItem="y1j-o8-NOK" secondAttribute="trailing" constant="40" id="tTm-rA-mE3"/>
-                            <constraint firstItem="3WI-aT-K7i" firstAttribute="top" secondItem="kw7-Hb-DrT" secondAttribute="top" constant="10" id="wPx-FM-ave"/>
+                            <constraint firstItem="3WI-aT-K7i" firstAttribute="top" secondItem="kw7-Hb-DrT" secondAttribute="top" constant="12" id="wPx-FM-ave"/>
                         </constraints>
                     </view>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="Mcl-dQ-B5r" secondAttribute="trailing" id="O2l-CG-He9"/>
+                    <constraint firstAttribute="trailing" secondItem="fjb-81-Je6" secondAttribute="trailing" id="0pi-kn-Izh"/>
+                    <constraint firstItem="fjb-81-Je6" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="54L-N7-GdR"/>
                     <constraint firstAttribute="bottom" secondItem="kw7-Hb-DrT" secondAttribute="bottom" id="P4f-Ue-CLc"/>
                     <constraint firstAttribute="trailing" secondItem="kw7-Hb-DrT" secondAttribute="trailing" id="RRi-Yx-Sbk"/>
-                    <constraint firstItem="Mcl-dQ-B5r" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="gB2-qp-fa1"/>
-                    <constraint firstItem="kw7-Hb-DrT" firstAttribute="top" secondItem="Mcl-dQ-B5r" secondAttribute="bottom" id="iaf-IB-3EY"/>
-                    <constraint firstItem="Mcl-dQ-B5r" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="iyg-0O-bOF"/>
+                    <constraint firstItem="fjb-81-Je6" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="eIL-qL-aky"/>
+                    <constraint firstItem="kw7-Hb-DrT" firstAttribute="top" secondItem="fjb-81-Je6" secondAttribute="bottom" id="gOg-Vo-aGk"/>
                     <constraint firstItem="kw7-Hb-DrT" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="sKF-7S-Bdg"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <point key="canvasLocation" x="86.956521739130437" y="173.10267857142856"/>
+            <connections>
+                <outlet property="badgeLabelView" destination="2fQ-nY-v89" id="tmA-6Z-exx"/>
+                <outlet property="badgeView" destination="thf-CE-BQ6" id="rDt-EO-Jy9"/>
+                <outlet property="companyLabel" destination="wND-az-DAv" id="Xd3-2Q-06l"/>
+                <outlet property="nCommentLabel" destination="Of2-q3-6ct" id="wo2-ol-ph5"/>
+                <outlet property="nLikeLabel" destination="ipA-Ek-je0" id="VjQ-YU-vwG"/>
+                <outlet property="popularView" destination="Mcl-dQ-B5r" id="Szy-Mn-5Bd"/>
+                <outlet property="titleLabel" destination="y1j-o8-NOK" id="jhT-gI-OxY"/>
+                <outlet property="userNameLabel" destination="1fn-iL-YJN" id="J2N-kM-2Zc"/>
+            </connections>
+            <point key="canvasLocation" x="86.956521739130437" y="173.77232142857142"/>
         </tableViewCell>
     </objects>
     <resources>
